--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,41 +7,81 @@
     tools:context=".Hello1">
 
     <LinearLayout
-        android:id="@+id/ly2"
+        android:id="@+id/hello1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="-33dp"
-        tools:layout_editor_absoluteY="175dp">
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btToHello1"
-            android:layout_width="125dp"
-            android:layout_height="58dp"
-            android:text="btToHello1" />
+        <LinearLayout
+            android:id="@+id/ly2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absolutey="0dp">
 
-        <Button
-            android:id="@+id/btToHello2"
-            android:layout_width="125dp"
-            android:layout_height="58dp"
-            android:layout_weight="1"
-            android:text="btToHello2" />
+            <Button
+                android:id="@+id/btToHello1"
+                android:layout_width="125dp"
+                android:layout_height="58dp"
+                android:background="#8BC34A"
+                android:text="btToHello1" />
 
-        <Button
-            android:id="@+id/btToHello3"
-            android:layout_width="125dp"
-            android:layout_height="58dp"
-            android:layout_weight="1"
-            android:text="btToHello3" />
+            <Button
+                android:id="@+id/btToHello2"
+                android:layout_width="125dp"
+                android:layout_height="58dp"
+                android:layout_weight="1"
+                android:background="#8BC34A"
+                android:text="btToHello2" />
+
+            <Button
+                android:id="@+id/btToHello3"
+                android:layout_width="125dp"
+                android:layout_height="58dp"
+                android:layout_weight="1"
+                android:background="#8BC34A"
+                android:text="btToHello3" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ly3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toStartOf="@id/ly2"
+            android:layout_marginTop="400dp">
+
+            <Button
+                android:id="@+id/call"
+                android:layout_width="match_parent"
+                android:layout_height="58dp"
+                android:layout_weight="1"
+                android:background="#03A9F4"
+                android:text="拨号" />
+
+            <Button
+                android:id="@+id/map"
+                android:layout_width="match_parent"
+                android:layout_height="58dp"
+                android:layout_weight="1"
+                android:background="#03A9F4"
+                android:text="查看地图"
+                android:layout_marginTop="10dp" />
+
+            <Button
+                android:id="@+id/website"
+                android:layout_width="match_parent"
+                android:layout_height="58dp"
+                android:layout_weight="1"
+                android:background="#03A9F4"
+                android:text="百度一下"
+                android:layout_marginTop="10dp" />
+        </LinearLayout>
+
+
     </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
