将hello2页面用来显示一个水果列表，列表用listView界面显示

--- a/app/src/main/res/layout/activity_hello2.xml
+++ b/app/src/main/res/layout/activity_hello2.xml
@@ -6,33 +6,43 @@
     tools:context=".Hello2">
 
     <LinearLayout
-        android:id="@+id/ly2"
+        android:id="@+id/hello2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="-93dp"
-        tools:layout_editor_absoluteY="73dp">
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btToHello1"
-            android:layout_width="125dp"
-            android:layout_height="58dp"
-            android:text="btToHello1" />
+        <LinearLayout
+            android:id="@+id/line1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btToHello2"
-            android:layout_width="125dp"
-            android:layout_height="58dp"
-            android:layout_weight="1"
-            android:text="btToHello2" />
+            <Button
+                android:id="@+id/btToHello1"
+                android:layout_width="125dp"
+                android:layout_height="58dp"
+                android:text="btToHello1" />
 
-        <Button
-            android:id="@+id/btToHello3"
-            android:layout_width="125dp"
-            android:layout_height="58dp"
-            android:layout_weight="1"
-            android:text="btToHello3" />
+            <Button
+                android:id="@+id/btToHello2"
+                android:layout_width="125dp"
+                android:layout_height="58dp"
+                android:layout_weight="1"
+                android:text="btToHello2" />
 
+            <Button
+                android:id="@+id/btToHello3"
+                android:layout_width="125dp"
+                android:layout_height="58dp"
+                android:layout_weight="1"
+                android:text="btToHello3" />
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/fruitList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 
