--- a/app/src/main/res/layout/activity_hello2_fruit.xml
+++ b/app/src/main/res/layout/activity_hello2_fruit.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp" />
+        android:textSize="20dp"
+        android:layout_marginLeft="20dp" />
 
 </LinearLayout>
